--- a/loteRPS/wizard/cria_rps_view.xml
+++ b/loteRPS/wizard/cria_rps_view.xml
@@ -7,24 +7,31 @@
         <field name="model">cria.rps</field>
         <field name="arch" type="xml">
 			<form string="Confirm Draft Invoices" version="7.0">
-				<group>
+				<field name="state" invisible="1"/>
+				<group states="init">
 					<p class="oe_grey">
 					    Gera o lote de RPS (Recibo Provisório de Serviço)
 					    para ser enviado a NFS-e.
 					</p>
 					<field name="state" invisible="1" />
 				</group>
+				<group states="done">
+				    <field name="filename" invisible="1"/>
+				    <field name="file" filename="filename"/>
+				</group>
 			    <footer>
-			        <button icon="gtk-apply" string="Gerar" name="gera_rps" type="object" default_focus="1" class="oe_highlight"/>
-			        or
-			        <button string="Cancelar" class="oe_link" special="cancel"/>
+			    	<group states="init">
+				        <button icon="gtk-apply" string="Gerar" name="gera_rps" type="object" default_focus="1" class="oe_highlight"/>
+				        or
+				        <button string="Cancelar" class="oe_link" special="cancel"/>
+				    </group>
 			    </footer>
 			</form>
         </field>
     </record>
 
     <act_window id="wiz_rps_gerador"
-      key2="client_action_multi" name="Gerar RPS"
+      key2="client_action_multi" name="Exportar RPS"
       res_model="cria.rps" src_model="account.invoice"
       view_id="view_rps_gerador_form"
       view_mode="form" target="new" view_type="form"/>
